app/assets/stylesheets/houston/feedback/feedback.scss
#import_csv_field {
  display: none;
}

.feedback-window {
  position: fixed;
  height: calc(100% - 146px);
  top: 146px;
  margin: 0 -20px;
  width: 100%;
  box-sizing: border-box;

  display: flex;
  flex-direction: row;

  .feedback-window-results {
    height: 100%;
    width: 50%;
    max-width: 500px;
    border-right: 1px solid #ccc;

    .scrollable {
      height: calc(100% - 73px);
      overflow-y: auto;
    }
  }

  .feedback-window-edit {
    height: 100%;
    width: 50%;
    flex-grow: 1;
  }
}

html.tester-bar .feedback-window {
  padding-bottom: 42px;
}

.feedback-search {
  padding: 20px;
  background: #f4f4f4;
  border-bottom: 1px solid #ccc;
  height: 32px;
}

#search_feedback {
  margin: 0;
  position: relative;
  display: table;

  input[type="search"] {
    margin: 0;
    width: 100%;
    box-sizing: border-box;
    height: 2.25em;
    padding: 0.25em 1em;
  }

  .feedback-search-bar {
    display: table-cell;
    width: 99%;
    white-space: nowrap;
    vertical-align: middle;
    position: relative;
  }

  .feedback-search-sort {
    display: table-cell;
    width: 1%;
    white-space: nowrap;
    vertical-align: middle;
    padding-left: 3px;

    select {
      margin: 0;
      width: 180px;
      height: 31.5px;
    }
  }



  #feedback_search_reset {
    position: absolute;
    top: 0.4em;
    right: 0.6em;
    cursor: pointer;

    &:not(:hover) { color: #e4e4e4; }
  }

  &.unperformed #feedback_search_reset { display: none; }
}

.feedback-report { padding: 20px; }

#search_report {
  color: #888;
  font-size: 0.88em;
}

#results {
  margin-left: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.feedback-conversation {
  position: relative;

  &.feedback-conversation-unread {
    font-weight: 500;
  }

  .feedback-metadata {
    font-size: 0.88em;
    color: #888;
    line-height: 16px;
  }
}

.feedback-search-result {
  .feedback-snippet {
    padding: 15px 20px 15px 16px;
    border-left: 4px solid transparent;

    &.feedback-archived {
      border-left-color: #aaa;
      color: #888;
    }
  }

  &.selected .feedback-snippet { background: rgba(128, 212, 255, 0.2); }
  &:focus { outline: 0; }

  .feedback-customer {
    font-size: 0.88em;
    font-weight: bold;
    white-space: nowrap;
    display: inline-block;
    width: calc(100% - 120px);
    overflow: hidden;
    text-overflow: ellipsis;
    height: 1.5em;
  }

  .feedback-metadata {
    font-size: 0.88em;
    color: #888;
    display: block;
    float: right;
  }

  .avatar {
    margin-right: 0.25em;
    vertical-align: top;

    &.avatar-empty {
      background: rgba(0,0,0,0.1);
      height: 16px;
      content: '';
      display: block;
    }
  }

  .feedback-text { clear: both; }
  .feedback-text em {
    font-style: normal;
    display: inline-block;
    background: rgba(255, 255, 0, 0.12);
  }

  .feedback-text.markdown {
    max-height: 3em; // 2 lines
    overflow: hidden;
    text-overflow: ellipsis;

    h1, h2, h3, h4, h5, h6 {
      font-family: inherit;
      font-size: inherit;
      font-weight: inherit;
      line-height: inherit;
    }
  }

  .feedback-reporter { display: block; float: left; }
  .feedback-conversation-signal-strength { display: block; float: left; margin: 0 3px 0 0; }
  .feedback-created { display: block; float: right; }

  .feedback-tag-list {
    position: absolute;
    left: 100%;
    top: 0;
    padding-left: 5.52486187845304%;
    width: 100%;
  }
}

#feedback {
  &.feedback-selected .feedback-search-result .feedback-tag-list { display: none; }
}

.feedback-digest .feedback-conversation {
  margin-bottom: 3em;
}

.feedback-edit-conversation,
.feedback-digest .feedback-conversation {
  .feedback-customer {
    font-size: 1.25em;
    font-weight: 400;
    line-height: 1em;
    margin: 0;
    min-height: 1em;
    margin-right: 2em;
    display: inline-block;
    text-indent: 0;
    vertical-align: text-top;
    height: 1.1em;

    max-width: calc(100% - 140px);
    text-overflow: ellipsis;
    overflow: hidden;
    margin: 0;

    &.unidentified {
      border-bottom: 2px dashed;

      &:hover {
        text-decoration: none;
      }
    }
  }
  a.feedback-customer { cursor: pointer; }

  .avatar {
    position: absolute;
    left: 0;
    top: 0.25em;

    &.avatar-empty {
      background: rgba(0,0,0,0.1);
      height: 24px;
      content: '';
      display: block;
    }
  }

  .feedback-reporter::after { content: ' • '; }
  .feedback-reporter, .feedback-created { vertical-align: bottom; }
}

.feedback-edit-conversation {
  .feedback-conversation-close,
  .feedback-conversation-copy,
  .feedback-conversation-copy-url {
    float: right;
    width: 24px;
    text-align: right;
    font-size: 20px;
    color: #e4e4e4;
    text-indent: 0;

    &:hover { color: #005580; }
  }

  .feedback-conversation-copy { font-size: 18px; margin-top: 1px; }
  .feedback-conversation-copy-url { font-size: 16px; margin-top: 2px; }

  .btn-delete, .btn-move {
    font-size: 20px;
    display: inline-block;
    width: 24px;
    color: #888;

    &:hover { color: #bd362f; }
  }

  .btn-archive, .btn-unarchive, .btn-edit, .btn-save, .btn-read, .btn-copy {
    float: right;
    margin-left: 3px;
  }

  .feedback-conversation-index {
    float: right;
    clear: right;
    display: inline-block;
    font-size: 0.88em;
    color: #888;
    line-height: 26px;
  }

  .btn-save,
  .feedback-text.edit,
  .feedback-customer-edit { display: none; }

  .feedback-text textarea {
    resize: none;
    width: 100%;
    box-sizing: border-box;
    padding: 20px;
  }

  &.edit-text {
    .feedback-customer { display: none; }
    .feedback-customer-edit {
      display: inline-block;
      text-indent: 0;
      input { margin: 0; }
    }

    .feedback-text.markdown { display: none; }
    .btn-save {
      display: inline-block;
      margin-left: 0.5em;
    }
    .feedback-text.edit { display: block; }
  }
}

.feedback-tags > input {
  margin: 0.5em 0 0 0;
}

.feedback-project .label {
  font-size: 11.844px;
  line-height: 14px;
  margin-right: 0.33em;
}

.feedback-tag {
  display: inline-block;
  padding: 2px 4px;
  font-size: 11.844px;
  line-height: 14px;
  color: #ffffff;
  white-space: nowrap;
  vertical-align: baseline;
  background-color: #aaa;
  border-radius: 3px;
  margin-right: 0.33em;

  a.feedback-remove-tag {
    width: 14px;
    text-align: center;
    margin: -2px -2px -2px 0;
    padding: 2px;
    cursor: pointer;
    color: white;

    &:hover { color: #005580; }
  }
}

#feedback_csv_import_modal {
  width: 640px;

  .modal-body {
    padding: 0;
    max-height: none;
    overflow: visible;
  }

  .span6 {
    border-right: 1px solid transparent;
    padding-right: 1.06382978723404%;
  }

  .span6 + .span6 {
    margin-left: 0;
    padding-left: 1.06382978723404%;
    border-left: 1px solid #f0f0f0;
    border-right: none;
    padding-right: 0;
  }

  .instructions {
    padding: 0 30px 0 15px; // room for the scrollbar
    box-sizing: border-box;

    background-color: #f5f5f5;
    border-bottom: 1px solid #ddd;

    .span6 {
      padding-top: 15px;
      padding-bottom: 5px;
    }

    .span6 + .span6 {
      border-left-color: #e8e8e8;
    }

    .csv-fields {
      padding: 0 8px 6px;
      white-space: nowrap;
    }
  }

  .scrollable-container {
    max-height: 300px;
    overflow-y: scroll;

    .csv-fields { padding: 8px 15px; }
  }

  .padded {
    border-top: 1px solid #ddd;
    background-color: #f5f5f5;
    padding: 8px 15px;
  }

  .feedback-tags { background: transparent; }

  .csv-field .example {
    display: block;
    color: #aaa;
    font-size: 0.88em;
  }
}

#new_feedback_modal {
  input[type="text"] {
    width: 100%;
    box-sizing: border-box;
    height: 30px;
  }
  textarea {
    width: 100%;
    box-sizing: border-box;
  }
  .feedback-tags {
    margin-top: 0;
    margin-bottom: 0;
  }
  form { margin-bottom: 0; }
}

#feedback_edit.affix {
  top: 90px;
  right: 20px;
  bottom: 20px;
  padding-left: 20px;

  .feedback-conversation {
    height: 100%;
  }
  .feedback-text.markdown {
    height: 60%; // Hack -> we should do this with JS to make it the height of the window minus other feedback controls
  }
}

.feedback-tag-cloud {
  li { display: inline-block; }

  a.feedback-tag {
    color: white;
    padding-right: 0;

    &:hover, &:active {
      text-decoration: none;
      background: #0088cc;
    }
  }

  .toggle-tag-visibility {
    color: rgb(194, 194, 194);
    text-decoration: none;

    &::before { content: 'more »'; }
    &:hover { color: #005580; }

    &.show-all-tags {
      &::before { content: '« less'; }
    }
  }

  .feedback-tag-count {
    background: rgba(255,255,255,0.3);
    display: inline-block;
    padding: 2px 6px;
    margin: -2px 0 -2px -2px;
    border-radius: 1em;
    text-align: center;
    font-size: 0.85em;
    position: relative;
    left: 4px;
  }
}

.feedback-conversation.feedback-edit-conversation {
  height: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;

  hr {
    border: none;
    height: 1px;
    background: #e4e4e4;
  }

  .feedback-header {
    margin: 20px 20px 0 20px;
    position: relative;
    text-indent: 36px;
    min-height: 52px;
    height: 52px;
    border-bottom: 1px solid #e4e4e4;
    white-space: nowrap;
  }

  .feedback-commands {
    padding: 10px 20px;
    background: #f4f4f4;
    border-top: 1px solid #ccc;
  }

  .feedback-body {
    flex-grow: 100;
    padding: 20px;
    overflow-y: auto;
  }

  &.edit-text .feedback-text.edit {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    border-radius: 0;
    border-left: none;
    border-right: none;
    // margin: 20px -20px; // when we add comments
    margin: 20px -20px -20px; // remove when we add comments
    border-bottom: none; // remove when we add comments
    width: calc(100% + 40px);
  }

  &.edit-text .feedback-body hr {
    display: none;
  }

  .feedback-signal-strength-selector {
    display: inline-block;
    text-indent: 0;

    .dropdown-menu { min-width: 100px; }
  }
}

#search_instructions {
  height: 100%;
  padding: 20px;

  h3 {
    line-height: inherit;
    margin: 0 0 20px 0;
    font-size: 1.25em;
    font-weight: 400;
    height: 53px;
    border-bottom: 1px solid #e4e4e4;
    padding: 0.33em 0 0 0;
    box-sizing: border-box;
    color: #888;
  }
}

.feedback-search-examples {
  padding: 0 10px;
  margin: 0 0 1em;
  overflow: hidden;
  font-size: 13px;

  dt {
    clear: left;
    float: left;
    width: 14em;
    padding: 4px 0;
    font-weight: 500;
    font-size: 0.92em;

    a { display: block; }
  }

  dd {
    margin-left: 14em;
    padding: 4px 0;
  }
}

